--- a/project.yml
+++ b/project.yml
@@ -28,8 +28,7 @@ targets:
         CFBundleVersion: "$(CURRENT_PROJECT_VERSION)"
         CFBundlePackageType: "FMWK"
     settings:
-      TARGETED_DEVICE_FAMILY: 1,2
-      SUPPORTS_MACCATALYST: "NO"
+      TARGETED_DEVICE_FAMILY: 1
   
   BloodyMaryDemo:
     type: application
@@ -37,6 +36,8 @@ targets:
     attributes:
       ProvisioningStyle: Automatic
     sources: [BloodyMaryDemo]
+    dependencies:
+      - target: BloodyMary
     info:
       path: BloodyMaryDemo/Resources/Info.plist
       properties:
@@ -54,12 +55,3 @@ targets:
         UISupportedInterfaceOrientations: ["UIInterfaceOrientationPortrait"]
     settings:
       TARGETED_DEVICE_FAMILY: 1
-    
-schemes:
-  Developement:
-      build:
-        targets:
-          BloodyMary: all
-      archive:
-        customArchiveName: BloodyMary_Development
-        revealArchiveInOrganizer: false
