Fix push completion

--- a/project.yml
+++ b/project.yml
@@ -63,6 +63,7 @@ targets:
       - path: BloodyMaryUnitTests
     dependencies:
       - target: BloodyMary
+      - target: BloodyMaryDemo
     info:
       path: BloodyMaryUnitTests/Resources/Info.plist
       properties:
