--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -5,6 +5,6 @@ readme: README.md
 module: BloodyMary
 github_url: https://github.com/TheInkedEngineer/
 github_file_prefix: https://github.com/TheInkedEngineer/blob/master
-module_version: 1.0.0
-xcodebuild_arguments: [clean,build,-scheme,Developement]
-output: docs/1.x
+module_version: 1.1.0
+xcodebuild_arguments: [clean,build,-scheme,BloodyMary]
+output: docs/1.1.x
